fix: Corrigir DATABASE_URL e adicionar docker compose down antes do build

--- a/.env.production.example
+++ b/.env.production.example
@@ -12,7 +12,7 @@
 # ✅ SEGURANÇA: Use senha forte (mínimo 32 caracteres, letras, números e símbolos)
 # ✅ SEGURANÇA: Porta 5432 NÃO está exposta publicamente no docker-compose.prod.yml
 # Para acesso externo, use SSH tunnel: ssh -L 5432:localhost:5432 user@server
-DATABASE_URL="postgresql://vipassist:SENHA_FORTE_AQUI@localhost:5432/vipassist?schema=public"
+DATABASE_URL="postgresql://vipassist:SENHA_FORTE_AQUI@postgres:5432/vipassist?schema=public"
 
 # Variáveis para Docker Compose
 POSTGRES_USER=vipassist
