fix: Corrigir configuracao Nginx para servir arquivos estaticos Next.js

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -116,17 +116,32 @@ http {
             proxy_read_timeout 120s;
         }
 
-        # Static files caching
+        # Static files caching (_next/static)
         location /_next/static/ {
             proxy_pass http://nextjs;
-            proxy_cache_valid 200 365d;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
             add_header Cache-Control "public, max-age=31536000, immutable";
+        }
+
+        # Next.js chunks
+        location /_next/ {
+            proxy_pass http://nextjs;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
         }
 
         # Images caching
         location ~* \.(jpg|jpeg|png|gif|ico|svg|webp)$ {
             proxy_pass http://nextjs;
-            proxy_cache_valid 200 30d;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
             add_header Cache-Control "public, max-age=2592000";
         }
     }
