fix: Adicionar NEXTAUTH_URL como build arg para corrigir URLs em producao

--- a/docker-compose.full.yml
+++ b/docker-compose.full.yml
@@ -8,6 +8,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        NEXTAUTH_URL: ${NEXTAUTH_URL}
     container_name: vipassist-app
     restart: always
     depends_on:
