--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -55,9 +55,11 @@ http {
     limit_req_zone $binary_remote_addr zone=api:10m rate=30r/s;
     limit_conn_zone $binary_remote_addr zone=addr:10m;
 
-    # Upstream Next.js
+    # Upstream Next.js com DNS resolver dinâmico
+    resolver 127.0.0.11 valid=30s;
+    
     upstream nextjs {
-        server app:3000;
+        server app:3000 max_fails=3 fail_timeout=30s;
         keepalive 32;
     }
 
