--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -55,13 +55,8 @@ http {
     limit_req_zone $binary_remote_addr zone=api:10m rate=30r/s;
     limit_conn_zone $binary_remote_addr zone=addr:10m;
 
-    # Upstream Next.js com DNS resolver dinâmico
-    resolver 127.0.0.11 valid=30s;
-    
-    upstream nextjs {
-        server app:3000 max_fails=3 fail_timeout=30s;
-        keepalive 32;
-    }
+    # DNS resolver para resolução dinâmica
+    resolver 127.0.0.11 valid=30s ipv6=off;
 
     # HTTP Server (redirect to HTTPS in production)
     server {
@@ -81,7 +76,8 @@ http {
 
         # Temporariamente permitir HTTP para desenvolvimento
         location / {
-            proxy_pass http://nextjs;
+            set $backend "app:3000";
+            proxy_pass http://$backend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -102,7 +98,8 @@ http {
             limit_req zone=api burst=20 nodelay;
             limit_conn addr 10;
 
-            proxy_pass http://nextjs;
+            set $backend "app:3000";
+            proxy_pass http://$backend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -120,7 +117,8 @@ http {
 
         # Static files caching (_next/static)
         location /_next/static/ {
-            proxy_pass http://nextjs;
+            set $backend "app:3000";
+            proxy_pass http://$backend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -131,7 +129,8 @@ http {
 
         # Next.js chunks
         location /_next/ {
-            proxy_pass http://nextjs;
+            set $backend "app:3000";
+            proxy_pass http://$backend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -141,7 +140,8 @@ http {
 
         # Images caching
         location ~* \.(jpg|jpeg|png|gif|ico|svg|webp)$ {
-            proxy_pass http://nextjs;
+            set $backend "app:3000";
+            proxy_pass http://$backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             add_header Cache-Control "public, max-age=2592000";
