fix: Adicionar volume para persistir .env no Docker e documentar solução

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,6 +68,7 @@ services:
     volumes:
       - ./public/fotos:/app/public/fotos
       - app_logs:/app/logs
+      - ./.env:/app/.env
     networks:
       - vipassist-network
     healthcheck:
